API更新周次获取
